# rofi-totp

./: CHANGELOG.md  Cargo.toml  README.md
snap/: snapcraft.yaml
src/: dir.rs  ini_config.rs  main.rs  rofi.rs  totp.rs  yaml_config.rs
