[package]
name = "rofi-totp"
version = "0.3.2"
authors = ["Revath S Kumar <rsk@revathskumar.com>"]
documentation = "https://github.com/revathskumar/rofi-totp"
homepage = "https://github.com/revathskumar/rofi-totp"
repository = "https://github.com/revathskumar/rofi-totp"
readme = "README.md"
keywords = ["totp", "alfred", "rofi", "gauth"]
license = "MIT"

[[bin]]
name = "rofi-totp"
test = false
bench = false
doctest = false

[dependencies]
yaml-rust = "0.4.2"
base32 = "0.4.0"
oath = "0.10.2"
rust-ini = "0.13"
